--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Dog Breeds</h1>
+
+    <ul>
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Golden_Retriever">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Golden_Retriever.jpg" alt="Golden Retriever" width="200">
+            </a>
+        </li>
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Poodle">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Poodle_Standard.jpg" alt="Poodle" width="200">
+            </a>
+        </li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
