--- a/main.html
+++ b/main.html
@@ -13,12 +13,12 @@
     <ul>
         <li>
             <a href="https://en.wikipedia.org/wiki/Golden_Retriever">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Golden_Retriever.jpg" alt="Golden Retriever" width="200">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="Golden Retriever" width="200">
             </a>
         </li>
         <li>
             <a href="https://en.wikipedia.org/wiki/Poodle">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Poodle_Standard.jpg" alt="Poodle" width="200">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="Poodle" width="200">
             </a>
         </li>
     </ul>
