--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <ul>
         <li>
             <a href="https://en.wikipedia.org/wiki/Golden_Retriever">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="Golden Retriever" width="200">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="Golden Retriever" >
             </a>
         </li>
         <li>
